--- a/contacto.html
+++ b/contacto.html
@@ -153,14 +153,14 @@
         </article>
     </main>
     <footer>
-        <section class="footer-content">
-            <article class="footer-left">
+        <div class="footer-content">
+            <div class="footer-left">
                 <h4>Datos del Grupo:</h4>
                 <p>Ezequiel Panigazzi - 38.695.636</p>
                 <p>Lucas Zacarias - 42.436.419</p>
                 <p>Julian Castro - 00.000.000</p>
-            </article>
-            <article class="footer-center">
+            </div>
+            <div class="footer-center">
                 <h4>Nombre inferior</h4>
                 <ul>
                     <li>
@@ -169,17 +169,16 @@
                     <li><a href="#">Vacunas</a></li>
                     <li>
                         <a
-                            href="https://www.buenosaires.gob.ar/laciudad/noticias/la-ciudad-instala-19-unidades-febriles-para-atencion-exclusiva-de-coronavirus"
-                            target="_blank"
+                            href="mapa.html"
                             >Hospitales</a
                         >
                     </li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
-            </article>
-            <article class="footer-right">
+            </div>
+            <div class="footer-right">
                 <h4>Redes Sociales:</h4>
-                <figure>
+                <div>
                     <a href="https://www.facebook.com/" target="_blank"
                         ><i class="fab fa-facebook"></i
                     ></a>
@@ -189,9 +188,9 @@
                     <a href="https://www.twitter.com/" target="_blank"
                         ><i class="fab fa-twitter"></i
                     ></a>
-                </figure>
-            </article>
-        </section>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
