--- a/mapa.html
+++ b/mapa.html
@@ -10,11 +10,21 @@
     href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" 
     crossorigin="anonymous">
+    <link
+            rel="icon"
+            href="img/logo-favicon.png"
+            type="image/png"
+            sizes="16x16"
+        />
 </head>
 <body>
     <header class="header-content">
         <section>
-            <img src="./img/logo-favicon.png" alt="logo-web" class="header-img" />
+            <img
+                    src="./img/logo-blanco.png"
+                    alt="logo-web"
+                    class="header-img"
+                />
             <input
                 list="search"
                 placeholder="Ingrese la enfermedad..."
@@ -33,14 +43,15 @@
             <button type="submit"><i class="fas fa-search"></i></button>
         </section>
     </header>
-    <nav class="menu">
+    <nav class="nav-bar">
         <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a href="listado-enfermedades.html">enfermedades</a></li>
-            <li><a href="https://www.argentina.gob.ar/salud/vacunas" target="_blank">vacunaci&oacute;n</a></li>
-            <li><a href="mapa.html">hospitales</a></li>
-            <li><a href="contacto.html">contacto</a></li>
+            <li><a href="/index.html">HOME</a></li>
+            <li><a href="/listado-enfermedades.html">ENFERMEDADES</a></li>
+            <li><a href="#">VACUNACI&oacute;N</a></li>
+            <li><a href="/mapa.html">HOSPITALES</a></li>
+            <li><a href="/contacto.html">CONTACTO</a></li>
         </ul>
+    </nav>
     </nav> 
     <main>
         <section>
@@ -61,14 +72,14 @@
         </section>    
     </main>
     <footer>
-        <section class="footer-content">
-            <article class="footer-left">
+        <div class="footer-content">
+            <div class="footer-left">
                 <h4>Datos del Grupo:</h4>
                 <p>Ezequiel Panigazzi - 38.695.636</p>
                 <p>Lucas Zacarias - 42.436.419</p>
                 <p>Julian Castro - 00.000.000</p>
-            </article>
-            <article class="footer-center">
+            </div>
+            <div class="footer-center">
                 <h4>Nombre inferior</h4>
                 <ul>
                     <li>
@@ -76,26 +87,29 @@
                     </li>
                     <li><a href="#">Vacunas</a></li>
                     <li>
-                        <a href="mapa.html">Hospitales</a>
+                        <a
+                            href="mapa.html"
+                            >Hospitales</a
+                        >
                     </li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
-            </article>
-            <article class="footer-right">
+            </div>
+            <div class="footer-right">
                 <h4>Redes Sociales:</h4>
-                <figure>
+                <div>
                     <a href="https://www.facebook.com/" target="_blank"
                         ><i class="fab fa-facebook"></i
                     ></a>
                     <a href="https://www.instagram.com/" target="_blank"
-                       ><i class="fab fa-instagram"></i
+                        ><i class="fab fa-instagram"></i
                     ></a>
                     <a href="https://www.twitter.com/" target="_blank"
                         ><i class="fab fa-twitter"></i
                     ></a>
-                </figure>
-            </article>
-        </section>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
