lista-enfermedades-commit

--- a/contacto.html
+++ b/contacto.html
@@ -20,7 +20,7 @@
         />
     </head>
     <body>
-        <header class="header-content">
+        <header id ="inicio" class="header-content">
             <section>
                 <img
                     src="img/logo-blanco.png"
@@ -153,6 +153,7 @@
                     </iframe>
                 </figure>
             </article>
+             <a href="#inicio" class="arriba"></a>
         </main>
         <footer>
             <div class="footer-content">
