--- a/detalle-enfermedades.html
+++ b/detalle-enfermedades.html
@@ -20,7 +20,7 @@
         <title>FAMEDIC - Servicios de salud</title>
     </head>
     <body>
-        <header class="header-content">
+        <header id ="inicio" class="header-content">
             <section>
                 <img
                     src="./img/logo-blanco.png"
@@ -435,6 +435,7 @@
                     </div>
                 </article>
             </section>
+             <a href="#inicio" class="arriba"></a>
         </main>
         <footer>
             <div class="footer-content">
