--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         />
     </head>
     <body>
-        <header class="header-content">
+        <header id ="inicio" class="header-content">
             <section>
                 <img
                     src="./img/logo-blanco.png"
@@ -127,6 +127,7 @@
                     <i class="fas fa-phone-alt"><span> 148</span></i>
                 </div>
             </aside>
+             <a href="#inicio" class="arriba"></a>
         </main>
         <footer>
             <div class="footer-content">
