--- a/mapa.html
+++ b/mapa.html
@@ -18,7 +18,7 @@
         />
 </head>
 <body>
-    <header class="header-content">
+    <header id ="inicio" class="header-content">
         <section>
             <img
                     src="./img/logo-blanco.png"
@@ -70,6 +70,7 @@
                 </a>
             </figure>
         </section>    
+         <a href="#inicio" class="arriba"></a>
     </main>
     <footer>
         <div class="footer-content">
