fix-visuales-listado

--- a/mapa.html
+++ b/mapa.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAMEDIC - Mapas</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href=".//css/mapa.css">
+    <link rel="stylesheet" href="./css/mapa.css">
     <link rel="stylesheet" 
     href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" 
@@ -78,7 +78,7 @@
                 <h4>Datos del Grupo:</h4>
                 <p>Ezequiel Panigazzi - 38.695.636</p>
                 <p>Lucas Zacarias - 42.436.419</p>
-                <p>Julian Castro - 00.000.000</p>
+                <p>Julian Castro - 39.347.169</p>
             </div>
             <div class="footer-center">
                 <h4>Nombre inferior</h4>
