--- a/detalle-enfermedades.html
+++ b/detalle-enfermedades.html
@@ -20,7 +20,7 @@
         <title>FAMEDIC - Servicios de salud</title>
     </head>
     <body>
-        <header id ="inicio" class="header-content">
+        <header id="inicio" class="header-content">
             <section>
                 <img
                     src="./img/logo-blanco.png"
@@ -422,20 +422,22 @@
                         </ul>
                     </div>
                     <div>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13142.207367246363!2d-58.479820030224616!3d-34.5649008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb67d776e79c9%3A0xe8722cf090719409!2sHospital%20Pirovano!5e0!3m2!1ses!2sar!4v1601431387743!5m2!1ses!2sar"
-                            width="600"
-                            height="450"
-                            frameborder="0"
-                            style="border: 0"
-                            allowfullscreen=""
-                            aria-hidden="false"
-                            tabindex="0"
-                        ></iframe>
+                        <figure>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13142.207367246363!2d-58.479820030224616!3d-34.5649008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb67d776e79c9%3A0xe8722cf090719409!2sHospital%20Pirovano!5e0!3m2!1ses!2sar!4v1601431387743!5m2!1ses!2sar"
+                                width="600"
+                                height="450"
+                                frameborder="0"
+                                style="border: 0"
+                                allowfullscreen=""
+                                aria-hidden="false"
+                                tabindex="0"
+                            ></iframe>
+                        </figure>
                     </div>
                 </article>
             </section>
-             <a href="#inicio" class="arriba"></a>
+            <a href="#inicio" class="arriba"></a>
         </main>
         <footer>
             <div class="footer-content">
@@ -443,7 +445,7 @@
                     <h4>Datos del Grupo:</h4>
                     <p>Ezequiel Panigazzi - 38.695.636</p>
                     <p>Lucas Zacarias - 42.436.419</p>
-                    <p>Julian Castro - 00.000.000</p>
+                    <p>Julian Castro - 39.347.169</p>
                 </div>
                 <div class="footer-center">
                     <h4>Nombre inferior</h4>
