--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <ul>
                 <li><a href="/index.html">HOME</a></li>
                 <li><a href="/listado-enfermedades.html">ENFERMEDADES</a></li>
-                <li><a href="#">VACUNACI&oacute;N</a></li>
+                <li><a href="vacunas.html">VACUNACI&oacute;N</a></li>
                 <li><a href="/mapa.html">HOSPITALES</a></li>
                 <li><a href="/contacto.html">CONTACTO</a></li>
             </ul>
@@ -110,8 +110,7 @@
                     </div>
                     <div class="pastillas-link-content">
                         <a
-                            href="https://www.argentina.gob.ar/salud/vacunas"
-                            target="_blank"
+                            href="vacunas.html"
                             class="pastillas-link"
                             >Vacunas</a
                         >
@@ -143,7 +142,7 @@
                         <li>
                             <a href="listado-enfermedades.html">Enfermedades</a>
                         </li>
-                        <li><a href="#">Vacunas</a></li>
+                        <li><a href="vacunas.html">Vacunas</a></li>
                         <li>
                             <a
                                 href="mapa.html"
