--- a/contacto.html
+++ b/contacto.html
@@ -49,7 +49,7 @@
             <ul>
                 <li><a href="/index.html">HOME</a></li>
                 <li><a href="/listado-enfermedades.html">ENFERMEDADES</a></li>
-                <li><a href="#">VACUNACI&oacute;N</a></li>
+                <li><a href="vacunas.html">VACUNACI&oacute;N</a></li>
                 <li><a href="/mapa.html">HOSPITALES</a></li>
                 <li><a href="/contacto.html">CONTACTO</a></li>
             </ul>
@@ -169,7 +169,7 @@
                         <li>
                             <a href="listado-enfermedades.html">Enfermedades</a>
                         </li>
-                        <li><a href="#">Vacunas</a></li>
+                        <li><a href="vacunas.html">Vacunas</a></li>
                         <li>
                             <a
                                 href="mapa.html"
