--- a/detalle-enfermedades.html
+++ b/detalle-enfermedades.html
@@ -17,7 +17,7 @@
             type="image/png"
             sizes="16x16"
         />
-        <title>FAMEDIC - Servicios de salud</title>
+        <title>FAMEDIC - Detalle enfermedad</title>
     </head>
     <body>
         <header id="inicio" class="header-content">
@@ -48,7 +48,7 @@
             <ul>
                 <li><a href="/index.html">HOME</a></li>
                 <li><a href="/listado-enfermedades.html">ENFERMEDADES</a></li>
-                <li><a href="#">VACUNACI&oacute;N</a></li>
+                <li><a href="vacunas.html">VACUNACI&oacute;N</a></li>
                 <li><a href="/mapa.html">HOSPITALES</a></li>
                 <li><a href="/contacto.html">CONTACTO</a></li>
             </ul>
@@ -453,7 +453,7 @@
                         <li>
                             <a href="listado-enfermedades.html">Enfermedades</a>
                         </li>
-                        <li><a href="#">Vacunas</a></li>
+                        <li><a href="vacunas.html">Vacunas</a></li>
                         <li>
                             <a href="mapa.html">Hospitales</a>
                         </li>
