--- a/listado-enfermedades.html
+++ b/listado-enfermedades.html
@@ -17,7 +17,7 @@
         />
 
         <meta charset="UTF-8" />
-        <title>Listado de enfermedades</title>
+        <title>FAMEDIC - Listado de enfermedades</title>
     </head>
     <body>
         <header id="inicio" class="header-content">
@@ -47,7 +47,7 @@
             <ul>
                 <li><a href="/index.html">HOME</a></li>
                 <li><a href="/listado-enfermedades.html">ENFERMEDADES</a></li>
-                <li><a href="#">VACUNACI&oacute;N</a></li>
+                <li><a href="vacunas.html">VACUNACI&oacute;N</a></li>
                 <li><a href="/mapa.html">HOSPITALES</a></li>
                 <li><a href="/contacto.html">CONTACTO</a></li>
             </ul>
@@ -213,7 +213,7 @@
                         <li>
                             <a href="listado-enfermedades.html">Enfermedades</a>
                         </li>
-                        <li><a href="#">Vacunas</a></li>
+                        <li><a href="vacunas.html">Vacunas</a></li>
                         <li>
                             <a href="mapa.html">Hospitales</a>
                         </li>
