--- a/mapa.html
+++ b/mapa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAMEDIC - Mapas</title>
+    <title>FAMEDIC - Hospitales</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/mapa.css">
     <link rel="stylesheet" 
@@ -47,7 +47,7 @@
         <ul>
             <li><a href="/index.html">HOME</a></li>
             <li><a href="/listado-enfermedades.html">ENFERMEDADES</a></li>
-            <li><a href="#">VACUNACI&oacute;N</a></li>
+            <li><a href="vacunas.html">VACUNACI&oacute;N</a></li>
             <li><a href="/mapa.html">HOSPITALES</a></li>
             <li><a href="/contacto.html">CONTACTO</a></li>
         </ul>
@@ -86,7 +86,7 @@
                     <li>
                         <a href="listado-enfermedades.html">Enfermedades</a>
                     </li>
-                    <li><a href="#">Vacunas</a></li>
+                    <li><a href="vacunas.html">Vacunas</a></li>
                     <li>
                         <a
                             href="mapa.html"
