cambio id repetido

--- a/listado-enfermedades.html
+++ b/listado-enfermedades.html
@@ -62,13 +62,13 @@
                 />
                 <button type="submit"><i class="fas fa-search"></i></button>
                 <input
-                    list="search"
+                    list="search-enfermedades"
                     placeholder="Filtrar por enfermedad..."
                     autofocus
                     autocomplete="off"
                 />
 
-                <datalist id="search">
+                <datalist id="search-enfermedades">
                     <option value="Coronavirus"></option>
                     <option value="Resfriado com&uacute;n"></option>
                     <option value="Influenza"></option>
