--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
                 <article>
                     <div>
                         <a
-                            href="https://www.buenosaires.gob.ar/laciudad/noticias/la-ciudad-instala-19-unidades-febriles-para-atencion-exclusiva-de-coronavirus"
-                            target="_blank"
+                            href="mapa.html"
                             ><img
                                 src="./img/hospital-icon.png"
                                 alt="hospitales-icon"
@@ -83,11 +82,13 @@
                 </article>
                 <article>
                     <div>
-                        <img
-                            src="./img/enfermedad-icon-new.png"
-                            alt="enfermedad-icon"
-                            class="pastillas-img"
-                        />
+                        <a
+                             href="listado-enfermedades.html"
+                            ><img
+                                src="./img/enfermedad-icon-new.png"
+                                alt="enfermedad-icon"
+                                class="pastillas-img"
+                        /></a>
                     </div>
                     <div class="pastillas-link-content">
                         <a
@@ -100,8 +101,7 @@
                 <article>
                     <div>
                         <a
-                            href="https://www.argentina.gob.ar/salud/vacunas"
-                            target="_blank"
+                            href="vacunas.html"
                             ><img
                                 src="./img/vacuna-icon.png"
                                 alt="vacunas-icon"
